[project]
name = "json-ld-test"
version = "0.0.1"
dependencies = [
    "linkml-runtime>=1.8.3",
    "linkml>=1.8.5",
]
requires-python = "==3.12.*"

[project.optional-dependencies]
dev = ["requests", "black", "pytest"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
