[project]
name = "json-ld-test"
version = "0.0.1"
dependencies = [
    "linkml-runtime>=1.8.3",
    "pydantic"
]
requires-python = "=>3.8"

[project.optional-dependencies]
dev = [
    "requests",
    "pytest",
    "linkml-runtime>=1.8.3",
    "linkml>=1.8.5",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
