[project]
name = "json-ld-test"
version = "0.0.1"
dependencies = [
    "linkml-runtime>=1.8.3",
    "pydantic"
]
license = { file = "" }
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "requests",
    "pytest",
    "linkml-runtime>=1.8.3",
    "linkml>=1.8.5",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mkdocs-material>=9.5.48",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.27.0",
    "griffe-pydantic>=1.1.0",
]

[tool.pytest.ini_options]
addopts = "--doctest-modules"